overflow-x fixed

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,12 @@
 
   background-color: var(--bg-color);
   /* TODO: fix linear-gradient */
-  /* background: linear-gradient(var(--bg-color) 9%, var(--blue-bg-color) 22%, var(--bg-color) 25%, var(--bg-color) 92%, var(--blue-bg-color) 100%); */
+  /* background: 
+  linear-gradient(var(--bg-color) 9%, var(--blue-bg-color) 22%, var(--bg-color) 25%, var(--bg-color) 92%, var(--blue-bg-color) 100%); */
+}
+
+html {
+  overflow-x: hidden; 
 }
 
 body {  
@@ -16,7 +21,6 @@ body {
   
   max-width: 100vw;
   max-width: 100svw;
-
   overflow-x: hidden;
 }
 
